[gd_scene load_steps=19 format=3 uid="uid://c4nlqhpyj4oos"]

[ext_resource type="Texture2D" uid="uid://glhs6mufbum3" path="res://Game/1Scene/0FarmScene(Main)/Texture/House1_top.png" id="1_fk7qo"]
[ext_resource type="Script" path="res://Game/1Scene/0FarmScene(Main)/Objects/script/house.gd" id="1_wcpt2"]
[ext_resource type="Texture2D" uid="uid://dw6y4jsgtjvnw" path="res://Game/1Scene/0FarmScene(Main)/Texture/House2_top.png" id="2_2mmrh"]
[ext_resource type="Texture2D" uid="uid://vkbpkxclym02" path="res://Game/1Scene/0FarmScene(Main)/Texture/House1_bottom.png" id="2_fosxg"]
[ext_resource type="Texture2D" uid="uid://e7hghl70g0ix" path="res://Game/1Scene/0FarmScene(Main)/Texture/House1_bottom_selected.png" id="3_ahy4l"]
[ext_resource type="Texture2D" uid="uid://vmg43gwar8ao" path="res://Game/1Scene/0FarmScene(Main)/Texture/House2_bottom.png" id="3_dkx3k"]
[ext_resource type="Texture2D" uid="uid://di37undp7lpnu" path="res://Game/1Scene/0FarmScene(Main)/Texture/House2_bottom_selected.png" id="5_ntv16"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m6dts"]
atlas = ExtResource("2_2mmrh")
region = Rect2(0, 0, 144, 101)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ysay"]
atlas = ExtResource("1_fk7qo")
region = Rect2(0, 0, 64, 124)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2w3g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6dts")
}],
"loop": true,
"name": &"House2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ysay")
}],
"loop": true,
"name": &"top",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_f55ef"]
atlas = ExtResource("3_dkx3k")
region = Rect2(0, 0, 144, 101)

[sub_resource type="AtlasTexture" id="AtlasTexture_esfgj"]
atlas = ExtResource("5_ntv16")
region = Rect2(0, 0, 144, 101)

[sub_resource type="SpriteFrames" id="SpriteFrames_kdpf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f55ef")
}],
"loop": true,
"name": &"House2Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esfgj")
}],
"loop": true,
"name": &"House2Selected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fosxg")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ahy4l")
}],
"loop": true,
"name": &"Selected",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ujxy"]
size = Vector2(75, 29)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmaf6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tnx7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1jhl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aaahq"]
size = Vector2(99, 54)

[node name="House" type="StaticBody2D"]
script = ExtResource("1_wcpt2")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
texture_filter = 1
position = Vector2(19.5, 37.7813)
scale = Vector2(1.60938, 1.60938)
sprite_frames = SubResource("SpriteFrames_o2w3g")
animation = &"top"
autoplay = "top"

[node name="Animated_sprite2d" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(19.5, 37.781)
scale = Vector2(1.609, 1.609)
sprite_frames = SubResource("SpriteFrames_kdpf1")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(18.5, 90.5)
shape = SubResource("RectangleShape2D_1ujxy")

[node name="Button" type="Button" parent="."]
offset_left = 7.0
offset_top = 90.0
offset_right = 32.0
offset_bottom = 133.0
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_vmaf6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2tnx7")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1jhl")

[node name="Trigger_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger_area"]
position = Vector2(19.5, 146)
shape = SubResource("RectangleShape2D_aaahq")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Trigger_area" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_exited" from="Trigger_area" to="." method="_on_trigger_area_body_exited"]
